feat: Создан Swagger для template И PUT заменён на PATCH
